# jitsi-slack-bolt

./: .gitignore  Dockerfile  README.md  build.sh  lint.sh  manifest.json  pyproject.toml  requirements.txt  start-oauth.sh  start-socket.sh  start.sh
src/jitsi_slack_bolt/: app.py  app_socketmode.py  gunicorn-config.py
src/jitsi_slack_bolt/listeners/: __init__.py  jitsi_command.py  jitsi_handlers.py
src/jitsi_slack_bolt/util/: __init__.py  config.py  messages.py  models.py  postgres.py  room_name.py  slack_store.py  store.py  vault.py
tests/: conftest.py  test_jitsi_command.py  test_jitsi_handlers.py  test_messages.py  test_room_name.py  test_workspace_store.py
